# boggle-analytics

./: .gitignore  README.md  app.py  pipeline.py  pyproject.toml
assets/: style.css
notebooks/: 01. Experimenting with Google Drive API.ipynb  02. Exploring Analytics.ipynb  03. Prototyping Visualizations.ipynb
utils/: google_drive.py  misc.py  settings.py  visualizations.py
